--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 VITE_API_BASE_URL="http://localhost:5055/api/v1"
 VITE_TECHNICIANS_ENDPOINT_PATH="technicians"
 VITE_WORKS_ENDPOINT_PATH="works"
+VITE_PROPERTIES_ENDPOINT_PATH="properties"
