--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL="http://localhost:5055/api/v1"
+VITE_API_BASE_URL="https://electrolink-backend.onrender.com/api/vi"
 VITE_TECHNICIANS_ENDPOINT_PATH="technicians"
 VITE_WORKS_ENDPOINT_PATH="works"
 VITE_PROPERTIES_ENDPOINT_PATH="properties"
