--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@primevue/core": "^4.3.4",
     "@primevue/themes": "^4.3.4",
     "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "pinia": "^3.0.2",
