--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,7 @@ VITE_API_BASE_URL="http://localhost:8088/api/v1"
 VITE_TECHNICIANS_ENDPOINT_PATH="technicians"
 VITE_WORKS_ENDPOINT_PATH="works"
 VITE_PROPERTIES_ENDPOINT_PATH="properties"
+VITE_REQUESTS_ENDPOINT_PATH="requests"
+VITE_CLIENTS_ENDPOINT_PATH="clients"
+VITE_SERVICES_ENDPOINT_PATH="services"
+VITE_SCHEDULES_ENDPOINT_PATH="schedules"
